# action-uv-publish

./: .bumpversion.toml  .pre-commit-config.yaml  README.md  action.yaml  pyproject.toml  script.py
.github/workflows/: pull-request.yaml  push.yaml
src/tests/: test_cli.py  test_main.py  test_settings.py
src/uv_publish/: cli.py  lib.py
