[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

[project]
  authors = [{ email = "d.wan@icloud.com", name = "Derek Wan" }]
  dependencies = [
    "click >=8.3.1, <8.4",
    "dycw-utilities >=0.169.9",
    "typed-settings[attrs, click] >=25.3.0, <25.4",
  ]
  description = "Tag the latest commit with the version read from `bump-my-version`"
  name = "dycw-uv-publish"
  readme = "README.md"
  requires-python = ">= 3.13"
  version = "0.2.0"

  [project.scripts]
    uv-publish = "uv_publish.cli:_main"

[dependency-groups]
  dev = ["dycw-utilities[test]", "rich", "pyright"]

[tool]
  [tool.uv]
    [tool.uv.build-backend]
      module-name = "uv_publish"
      module-root = "src"
